fix: word-break on the Latin script
Please check on logographic scripts and see if there are not broken Chinese characters.

--- a/src/components/Session/components/index.scss
+++ b/src/components/Session/components/index.scss
@@ -28,6 +28,8 @@
   .session-content {
     p {
       --uno: leading-6;
+      overflow-wrap: break-word;
+        word-break: break-word;
     }
 
     pre {
